--- a/book.toml
+++ b/book.toml
@@ -11,8 +11,8 @@ build-dir = "public"
 [output.html]
 additional-css = ["./assets/custom.css", "tabbed-code-blocks.css"]
 additional-js = ["tabbed-code-blocks.js"]
-git-repository-url = "https://gitlab.cs.pub.ro/eim/labs"
-edit-url-template = "https://gitlab.cs.pub.ro/eim/labs/edit/master/{path}"
+git-repository-url = "https://gitlab.cs.pub.ro/eim/eim.pages.upb.ro"
+edit-url-template = "https://gitlab.cs.pub.ro/eim/eim.pages.upb.ro/edit/master/{path}"
 no-section-label = true
 default-theme = "Rust"
 
